@@ -111,7 +111,8 @@ seq(length.out= )
   arguments return a vector of type \code{"integer"} or \code{"double"}:
   programmers should not rely on which.
 
-  \code{seq_along} and \code{seq_len} always return an integer vector.
+  \code{seq_along} and \code{seq_len} return an integer vector, unless
+  it is a \emph{long vector} when it will be double.
 }
 
 \references{
