@@ -39,6 +39,7 @@ SEXP attribute_hidden do_lapply(SEXP call, SEXP op, SEXP args, SEXP rho)
     FUN = CADR(args);  /* must be unevaluated for use in e.g. bquote */
     n = xlength(XX);
     if (n == NA_INTEGER) error(_("invalid length"));
+    Rboolean realIndx = n > INT_MAX;
 
     PROTECT(ans = allocVector(VECSXP, n));
     names = getAttrib(XX, R_NamesSymbol);
@@ -57,7 +58,7 @@ SEXP attribute_hidden do_lapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 	   protection of its args internally), but not both of them,
 	   since the computation of one may destroy the other */
 
-	PROTECT(ind = allocVector(INTSXP, 1));
+	PROTECT(ind = allocVector(realIndx ? REALSXP : INTSXP, 1));
 	if(isVectorAtomic(XX))
 	    PROTECT(tmp = LCONS(R_Bracket2Symbol,
 				LCONS(XX, LCONS(ind, R_NilValue))));
@@ -68,8 +69,8 @@ SEXP attribute_hidden do_lapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 				LCONS(tmp, LCONS(R_DotsSymbol, R_NilValue))));
 
 	for(i = 0; i < n; i++) {
-	    // FIXME, need to use double
-	    INTEGER(ind)[0] = i + 1;
+	    if (realIndx) REAL(ind)[0] = (double)(i + 1);
+	    else INTEGER(ind)[0] = (int)(i + 1);
 	    tmp = eval(R_fcall, rho);
 	    if (NAMED(tmp))
 		tmp = duplicate(tmp);
@@ -87,8 +88,10 @@ SEXP attribute_hidden do_lapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 /* This is a special .Internal */
 SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP R_fcall, ans, names=R_NilValue, rowNames=R_NilValue, X, XX, FUN, value, dim_v;
-    R_xlen_t i, n, commonLen; 
+    SEXP R_fcall, ans, names = R_NilValue, rowNames = R_NilValue, 
+	X, XX, FUN, value, dim_v;
+    R_xlen_t i, n;
+    int commonLen;
     int useNames, rnk_v = -1; // = array_rank(value) := length(dim(value))
     Rboolean array_value;
     SEXPTYPE commonType;
@@ -105,8 +108,11 @@ SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 
     n = xlength(XX);
     if (n == NA_INTEGER) error(_("invalid length"));
+    Rboolean realIndx = n > INT_MAX;
 
-    commonLen = xlength(value);
+    commonLen = length(value);
+    if (commonLen > 1 && n > INT_MAX)
+	error(_("long vectors are not supported for matrix/array results"));
     commonType = TYPEOF(value);
     dim_v = getAttrib(value, R_DimSymbol);
     array_value = (TYPEOF(dim_v) == INTSXP && LENGTH(dim_v) >= 1) ? TRUE : FALSE;
@@ -146,19 +152,13 @@ SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 				LCONS(tmp, LCONS(R_DotsSymbol, R_NilValue))));
 
 	for(i = 0; i < n; i++) {
-	    int j;
 	    SEXPTYPE tmpType;
-	    INTEGER(ind)[0] = i + 1;  // FIXME
+	    if (realIndx) REAL(ind)[0] = (double)(i + 1);
+	    else INTEGER(ind)[0] = (int)(i + 1);
 	    tmp = eval(R_fcall, rho);
-#ifdef LONG_VECTOR_SUPPORT
-	    if (xlength(tmp) != commonLen)
-	    	error(_("values must be length %ld,\n but FUN(X[[%ld]]) result is length %ld"),
-	               commonLen, i+1, xlength(tmp));
-#else
 	    if (length(tmp) != commonLen)
 	    	error(_("values must be length %d,\n but FUN(X[[%d]]) result is length %d"),
 	               commonLen, i+1, length(tmp));
-#endif
 	    tmpType = TYPEOF(tmp);
 	    if (tmpType != commonType) {
 	    	Rboolean okay = FALSE;
@@ -178,7 +178,7 @@ SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 	    	REPROTECT(rowNames = getAttrib(tmp,
 					       array_value ? R_DimNamesSymbol : R_NamesSymbol),
 			  index);
-	    for (j = 0; j < commonLen; j++) {
+	    for (int j = 0; j < commonLen; j++) {
 	    	switch (commonType) {
 	    	case CPLXSXP: COMPLEX(ans)[i*commonLen + j] = COMPLEX(tmp)[j]; break;
 	    	case REALSXP: REAL(ans)[i*commonLen + j] = REAL(tmp)[j]; break;
@@ -200,11 +200,11 @@ SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 	rnk_v = array_value ? LENGTH(dim_v) : 1;
 	PROTECT(dim = allocVector(INTSXP, rnk_v+1));
 	if(array_value)
-	    for(int j=0; j < rnk_v; j++)
+	    for(int j = 0; j < rnk_v; j++)
 		INTEGER(dim)[j] = INTEGER(dim_v)[j];
 	else
-	    INTEGER(dim)[0] = commonLen; // FIXME
-	INTEGER(dim)[rnk_v] = n; // FIXME
+	    INTEGER(dim)[0] = commonLen;
+	INTEGER(dim)[rnk_v] = (int) n;  // checked above
 	setAttrib(ans, R_DimSymbol, dim);
 	UNPROTECT(1);
     }
@@ -221,7 +221,7 @@ SEXP attribute_hidden do_vapply(SEXP call, SEXP op, SEXP args, SEXP rho)
 			// should never happen ..
 			error(_("dimnames(<value>) is neither NULL nor list of length %d"),
 			      rnk_v);
-		    for(int j=0; j < rnk_v; j++)
+		    for(int j = 0; j < rnk_v; j++)
 			SET_VECTOR_ELT(dimnames, j, VECTOR_ELT(rowNames, j));
 		} else
 		    SET_VECTOR_ELT(dimnames, 0, rowNames);
